# recommandations-medicales

./: .editorconfig  .gitattributes  .gitignore  .htmlvalidate.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  config.toml  dockerfile  frontmatter.json  hugo.toml  lunr-index.json  netlify.toml  package-lock.json  package.json  playwright.config.js  postcss.config.js  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
archetypes/: default.md
assets/css/: material-purge.css  material.css  material.css.map  print-material.css
assets/data/: deficit-g6pd.csv  duree-arret-travail.csv  infox.csv  maternites-2024.csv  medicaments-ecrasables.csv  medicaments-repas.csv  perfusions-domicile.csv  services-urgences-ophtalmo.csv  societes-savantes.csv  tensiometres-valides.csv  tuberculosis-incidence.csv  tuberculosis_prevalence.csv
assets/js/: lyra.mjs  orama.mjs  search.js
content/: about.md  actualites.md  application.md  clear.md  mentions-legales.md  offline.md  projet.md
dev/: 404.html  index.html  rss.xml  sitemap.xml
hint-report/: https-recomedicales-fr.html
layouts/: 404.html  actualites.html  application.html  baseof.html  clear.html  home.html  home.redirects  home.rss.xml  index.html  index.html.html  index.js  index.json  index.json.json  index.rss.xml  index.webmanifest  index.xml  list.html  offline.html  rate-limit.html  robots.txt  sitemap.xml
static/: BingSiteAuth.xml  flexsearch.js  license.xml  lyra.mjs  manifest.webmanifest  sw-clear.js  sw.js
tests/: section-anchors.spec.js
(+1325 files in other folders)
