[tool.poetry]
name = "recomedicales"
version = "0.1.0"
description = "Manage dependencies to execute various Python scripts used in RecoMedicales."
authors = ["djibe"]
homepage = "https://recomedicale.fr/"
license = "CC BY-NC 4.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
